# turtlebot_apps

./: .gitignore  .hgtags  .travis.yml  CHANGELOG.rst  README.md  stack.xml
pano/: Makefile  (+3 more)
pano/pano_core/: CMakeLists.txt  mainpage.dox  manifest.xml
pano/pano_core/apps/: stitcher.cpp  video_stitcher.cpp
pano/pano_core/data/: fire-i.camera.yml
pano/pano_core/src/: Images.cpp
pano/pano_core/test/: molecule_builder.cpp  video_stitcher.cpp
software/pano/pano_core/: .gitignore  CHANGELOG.rst  CMakeLists.txt  logitech.camera.yml  manifest.xml  package.xml
software/pano/pano_py/: .cproject  .project  CHANGELOG.rst  CMakeLists.txt  package.xml
software/pano/pano_ros/: .cproject  .project  CHANGELOG.rst  CMakeLists.txt  mainpage.dox  manifest.xml  package.xml  setup.py
software/pano/turtlebot_panorama/: .cproject  .project  CMakeLists.txt
turtlebot_actions/: .gitignore  .project  CHANGELOG.rst  CMakeLists.txt  CMakeLists.txt.backup  manifest.xml  package.xml
turtlebot_actions/action/: TurtlebotMove.action
turtlebot_actions/include/turtlebot_actions/: detect_calibration_pattern.h
turtlebot_actions/launch/: client_fiducial_test.launch  client_move_test.launch  client_move_test_vel_crtl.launch  server_find_fudicial.launch  server_turtlebot_move.launch  server_turtlebot_move_vel_ctrl.launch
turtlebot_actions/launch/includes/: _velocity_smoother.launch
turtlebot_actions/scripts/: test_fiducial.py  test_move.py  test_move_vel_ctrl.py
turtlebot_actions/src/: .gitignore  detect_calibration_pattern.cpp  find_fiducial_pose.cpp  turtlebot_move_action_server.cpp
turtlebot_apps/: .cproject  .project  CHANGELOG.rst  CMakeLists.txt  package.xml
turtlebot_calibration/: CHANGELOG.rst  CMakeLists.txt  manifest.xml  package.xml
turtlebot_calibration/launch/: calibrate.launch
turtlebot_calibration/src/turtlebot_calibration/: calibrate.py
turtlebot_core_apps/: .cproject  .project  CHANGELOG.rst  CMakeLists.txt  mainpage.dox  manifest.xml  package.xml
turtlebot_core_apps/apps/android_make_a_map/: android_make_a_map.app  android_make_a_map.launch  make_a_map.launch
turtlebot_core_apps/apps/android_map_nav/: android_map_nav.app  android_map_nav.launch
turtlebot_core_apps/apps/android_teleop/: android_teleop.app  android_teleop.launch
turtlebot_core_apps/apps/auto_docking/: auto_docking.app  auto_docking.launch
turtlebot_core_apps/apps/chirp/: chirp.app
turtlebot_core_apps/apps/follower/: follower.app  follower.launch
turtlebot_core_apps/apps/joystick_teleop/: joystick_teleop.app
turtlebot_core_apps/apps/panorama/: panorama.app  panorama.interface  panorama.launch
turtlebot_core_apps/apps/ps3_teleop/: ps3_teleop.app
turtlebot_core_apps/apps/web/: readme.txt
turtlebot_core_apps/apps/xbox360_teleop/: xbox360_teleop.app
turtlebot_core_apps/media/: readme.txt
turtlebot_core_apps/param/: teleop_mux.yaml  teleop_smoother.yaml
turtlebot_core_apps/rapps/android_make_a_map/: android_make_a_map.interface  android_make_a_map.launch  android_make_a_map.rapp
turtlebot_core_apps/rapps/android_map_manager/: android_map_manager.interface  android_map_manager.launch  android_map_manager.rapp
turtlebot_core_apps/rapps/android_map_nav/: android_map_nav.app  android_map_nav.interface  android_map_nav.launch  android_map_nav.rapp
turtlebot_core_apps/rapps/android_teleop/: android_teleop.app  android_teleop.interface  android_teleop.launch  (+1 more)
turtlebot_follower/: .cproject  .project  CHANGELOG.rst  CMakeLists.txt  manifest.xml  package.xml
turtlebot_follower/app/: calling.app  calling.launch  follower.interface  follower.launch
turtlebot_follower/cfg/: .gitignore  Centroid.cfg  Follower.cfg
turtlebot_follower/launch/: _follower.launch  follower.launch
turtlebot_follower/param/: follower_mux.yaml  follower_smoother.yaml  mux.yaml
turtlebot_follower/plugins/: nodelets.xml
turtlebot_follower/scripts/: switch.py
turtlebot_follower/src/: .gitignore  centroid.cpp  follower.cpp
turtlebot_interactive_markers/: .cproject  .project  CHANGELOG.rst  CMakeLists.txt  package.xml
turtlebot_interactive_markers/launch/: interactive_markers.launch
turtlebot_interactive_markers/src/: turtlebot_marker_server.cpp
turtlebot_navigation/: .cproject  .project  CHANGELOG.rst  CMakeLists.txt  gmapping_demo.launch  manifest.xml  package.xml
turtlebot_navigation/config/: amcl_turtlebot.launch  amcl_turtlebot_map_from_topic.launch  costmap_common_params.yaml  gmapping_turtlebot.launch
turtlebot_navigation/env-hooks/: 25.turtlebot-navigation.sh.em
turtlebot_navigation/laser/: costmap_common_params.yaml  laser_amcl_demo.launch  laser_gmapping_demo.launch  move_base_laser.launch
turtlebot_navigation/launch/: amcl_demo.launch  bump_navi_demo.launch  gmapping_demo.launch
turtlebot_navigation/maps/: ctrl_room.pgm  ctrl_room.yaml
turtlebot_navigation/param/: astra_costmap_params.yaml  base_local_planner_params.yaml  costmap_common_params.yaml  dwa_local_planner_params.yaml  global_costmap_params.yaml  global_planner_params.yaml  local_costmap_params.yaml  move_base_params.yaml  navfn_global_planner_params.yaml
turtlebot_panorama/: .cproject  .project  CHANGELOG.rst  CMakeLists.txt  mainpage.dox  manifest.xml  package.xml
turtlebot_panorama/app/: panorama.app  panorama.launch
turtlebot_panorama/launch/: _panorama_continuous.launch  _panorama_snapshot.launch  panorama.launch  panorama_continuous.launch  panorama_snapshot.launch  turtlebot_panorama.launch  turtlebot_panorama_cont.launch
turtlebot_panorama/param/: mux.yaml
turtlebot_panorama/scripts/: loop.py
turtlebot_panorama/src/: main.cpp  main2.cpp  pano_app.cpp  pano_app2.cpp  pano_app3.cpp  panorama.cpp
turtlebot_panorama/srv/: TakePano.srv
turtlebot_rapps/: .cproject  .project  CHANGELOG.rst  CMakeLists.txt  package.xml
turtlebot_rapps/media/: template.xcf  template_highres.xcf
turtlebot_samples/: CMakeLists.txt  package.xml
turtlebot_samples/launch/: exploration.launch
turtlebot_samples/param/: costmap_exploration.yaml
turtlebot_sounds/: .cproject  .project  CMakeLists.txt  package.xml
(+251 files in other folders)
