<package>
  <name>turtlebot_calibration</name>
  <version>2.1.1</version>
  <description>turtlebot_calibration</description>
  <maintainer email="turtlebot@osrfoundation.org">OSRF</maintainer>
  <license>BSD</license>
  <url type="website">http://ros.org/wiki/turtlebot_calibration</url>
  <author>Wim Meeussen</author>
  
  <buildtool_depend>catkin</buildtool_depend>
  
  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>nav_msgs</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>message_generation</build_depend>
  <build_depend>python_orocos_kdl</build_depend>

  <run_depend>rospy</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>sensor_msgs</run_depend>
  <run_depend>nav_msgs</run_depend>
  <run_depend>geometry_msgs</run_depend>
  <run_depend>message_runtime</run_depend>
  <run_depend>python_orocos_kdl</run_depend>
  <run_depend>turtlebot_bringup</run_depend>
</package>