<package>
  <name>turtlebot_core_apps</name>
  <version>2.2.5</version>
  <description>The core set of turtlebot 'app manager' apps are defined in this package. </description>

  <maintainer email="stonier@rnd.yujinrobot.com">Daniel Stonier</maintainer>

  <license>BSD</license>

  <url type="website">http://ros.org/wiki/turtlebot_core_apps</url> 
  <url type="repository">https://github.com/turtlebot/turtlebot_apps</url>
  <url type="bugtracker">https://github.com/turtlebot/turtlebot_apps/issues</url>
  
  <buildtool_depend>catkin</buildtool_depend>

  <run_depend>kobuki_auto_docking</run_depend>
  <run_depend>turtlebot_bringup</run_depend>
  <run_depend>turtlebot_follower</run_depend>
  <run_depend>turtlebot_navigation</run_depend>
  <run_depend>turtlebot_panorama</run_depend>
  <run_depend>turtlebot_teleop</run_depend>

  <!-- for navigation apps -->
  <run_depend>warehouse_ros</run_depend>
  <run_depend>map_store</run_depend>
  <run_depend>tf</run_depend>

  <!-- android_teleop -->
  <run_depend>compressed_image_transport</run_depend>
  <run_depend>topic_tools</run_depend>

</package>
